[metadata]
name = plover-rpn-calculator
version = 0.0.1
description = A stack-based calculator plugin for Plover
long_description = file: README.md
long_description_content_type = text/markdown
author = Kaoffie
author_email = kaoffie@gmail.com
url = https://github.com/Kaoffie/plover_rpn_calculator
license = MIT License (MIT)
classifiers = 
    Development Status :: 4 - Beta
    Environment :: Plugins
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
keywords = plover plover_plugin

[options]
zip_safe = True
setup_requires = 
    setuptools >= 30.3.0
install_requires =
    plover >= 4.0.0.dev10
packages = 
    plover_rpn_calculator

[options.entry_points]
plover.meta =
  rpn_put = plover_rpn_calculator.calculator:rpn_put
  rpn_put_ext = plover_rpn_calculator.calculator:rpn_put_ext
  rpn_del_buff = plover_rpn_calculator.calculator:rpn_del_buff
  rpn_clear_buff = plover_rpn_calculator.calculator:rpn_clear_buff
  rpn_clear_stack = plover_rpn_calculator.calculator:rpn_clear_stack
  rpn_clear_all = plover_rpn_calculator.calculator:rpn_clear_all
  rpn_push = plover_rpn_calculator.calculator:rpn_push
  rpn_push_bin = plover_rpn_calculator.calculator:rpn_push_bin
  rpn_push_hex = plover_rpn_calculator.calculator:rpn_push_hex
  rpn_add = plover_rpn_calculator.calculator:rpn_add
  rpn_sub = plover_rpn_calculator.calculator:rpn_sub
  rpn_mul = plover_rpn_calculator.calculator:rpn_mul
  rpn_div = plover_rpn_calculator.calculator:rpn_div
  rpn_intdiv = plover_rpn_calculator.calculator:rpn_intdiv
  rpn_mod = plover_rpn_calculator.calculator:rpn_mod
  rpn_pow = plover_rpn_calculator.calculator:rpn_pow
  rpn_neg = plover_rpn_calculator.calculator:rpn_neg
  rpn_and = plover_rpn_calculator.calculator:rpn_and
  rpn_or = plover_rpn_calculator.calculator:rpn_or
  rpn_xor = plover_rpn_calculator.calculator:rpn_xor
  rpn_not = plover_rpn_calculator.calculator:rpn_not
  rpn_lsl = plover_rpn_calculator.calculator:rpn_lsl
  rpn_lsr = plover_rpn_calculator.calculator:rpn_lsr
  rpn_swap = plover_rpn_calculator.calculator:rpn_swap
  rpn_pop = plover_rpn_calculator.calculator:rpn_pop
  rpn_dup = plover_rpn_calculator.calculator:rpn_dup
  rpn_func = plover_rpn_calculator.calculator:rpn_func
  rpn_end = plover_rpn_calculator.calculator:rpn_end
